apps/apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parcial-fjst
---
# App 1: Nginx
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: parcial-fjst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: parcial-fjst
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
---
# App 2: Httpd (Apache)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app
  namespace: parcial-fjst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-app
  template:
    metadata:
      labels:
        app: httpd-app
    spec:
      containers:
      - name: httpd
        image: httpd:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: parcial-fjst
spec:
  selector:
    app: httpd-app
  ports:
  - port: 80
    targetPort: 80
---
# App 3: Whoami (Traefik whoami)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-app
  namespace: parcial-fjst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-app
  template:
    metadata:
      labels:
        app: whoami-app
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: parcial-fjst
spec:
  selector:
    app: whoami-app
  ports:
  - port: 80
    targetPort: 80
---
# App 4: Hello (NGINX Hello)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: parcial-fjst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: parcial-fjst
spec:
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 80
